apps/beszel/k8s/hub.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beszel
  namespace: default
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: beszel
  template:
    metadata:
      labels:
        app: beszel
    spec:
      enableServiceLinks: false
      containers:
        - name: beszel
          image: "henrygd/beszel:0.18.7@sha256:a849ad80814b6a1a3be665304dcace5d4854b3bed7bde4dd1227e8ce1b82d477"
          ports:
            - name: http
              containerPort: 8090
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /beszel_data
            - name: socket
              mountPath: /beszel_socket
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/beszel/data
            type: Directory
        - name: socket
          hostPath:
            path: /storage/apps/beszel/socket
            type: Directory
