apps/beszel/k8s/hub.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: beszel
  ports:
    - name: http
      port: 8090
      targetPort: http
      protocol: TCP
