apps/beszel/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel
  namespace: beszel
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - beszel.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: beszel
          port: 80
